--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@modelcontextprotocol/sdk": "^0.6.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
+    "express": "^4.18.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "tsx": "^4.7.0"
   }
 }
