--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: mcp-sse-server
+    name: employee-mcp-server
     env: node
     plan: free
     buildCommand: npm install && npm run build
