--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: employee-mcp-server
     env: node
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: npm install
     startCommand: npm start
     healthCheckPath: /health
