Fix: Update build configuration for JavaScript project
- Add build script to package.json (no-op for JS project)
- Update render.yaml to use 'npm install && npm run build'
- Correct README.md to reflect JavaScript (not TypeScript)
- Add build step explanation in documentation

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: employee-mcp-server
     env: node
     plan: free
-    buildCommand: npm install
+    buildCommand: npm install && npm run build
     startCommand: npm start
     healthCheckPath: /health
