--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MCP Server with SSE for employee management",
   "main": "index.js",
   "scripts": {
+    "build": "echo \"No build step required for JavaScript project\"",
     "start": "node index.js",
     "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
